--- a/internal/golinks/web/html/index.html
+++ b/internal/golinks/web/html/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Golinks</title>
+    <link rel="icon" href="data:,">
 </head>
 <body>
 <form method="post" action="/links">
